syntax = "proto3";

option go_package = "github.com/MemeLabs/go-ppspp/pkg/pb;pb";
option java_package = "gg.strims.ppspp.proto";
option swift_prefix = "PB";

import "google/protobuf/any.proto";

message Call {
  uint64 id = 1;
  uint64 parent_id = 2;
  string method = 3;
  google.protobuf.Any argument = 4;
  map<string, google.protobuf.Any> headers = 5;
}

message Error {
  string message = 1;
}

message Cancel {}

message Undefined {}

message Close {}

message RPCCallUnaryRequest {
  uint64 id = 1;
}

message RPCCallUnaryResponse {
  uint64 id = 1;
}

message RPCCallStreamRequest {
  uint64 id = 1;
  uint64 count = 2;
}

message RPCCallStreamResponse {
  uint64 id = 1;
}

service RPCTest {
  rpc CallUnary(RPCCallUnaryRequest) returns (RPCCallUnaryResponse);
  rpc CallStream(RPCCallStreamRequest) returns (stream RPCCallStreamResponse);
}
